--- a/src/app/main-site/custom-snackbar/custom-snackbar.component.html
+++ b/src/app/main-site/custom-snackbar/custom-snackbar.component.html
@@ -14,3 +14,4 @@
         {{ data?.action }}
     </button>
 </div>
+<mat-progress-bar mode="determinate" [value]="progress | async"></mat-progress-bar>
