--- a/src/app/main-site/main-site.component.html
+++ b/src/app/main-site/main-site.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <button (click)="openSnackBar('Testing our snackBar for success message message message message message message v vv message message message!', 'Zatvori', 'Success')">Snack success</button>
     <button (click)="openSnackBar('Testing our snackBar for error message!', 'Zatvori', 'Error', 3000)">Snack error</button>
-    <button (click)="openSnackBar('Testing our snackBar for warning message!', 'Zatvori', 'Warning')">Snack warning</button>
+    <button (click)="openSnackBar('Testing our snackBar for warning message!', 'Zatvori', 'Warning', 10000)">Snack warning</button>
     <button (click)="openSnackBar('Testing our snackBar for info message!', 'Zatvori', 'Info')">Snack info</button>
 </div>
